--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -22,16 +22,16 @@
                         {% endif %}
                         
                         <div class="mb-3">
-                            <label for="{{ form.username.id_for_label }}" class="form-label">Username</label>
-                            <input type="text" name="username" class="form-control" id="{{ form.username.id_for_label }}" required>
+                            <label for="id_username" class="form-label">Username</label>
+                            {{ form.username }}
                             {% if form.username.errors %}
                                 <div class="text-danger">{{ form.username.errors }}</div>
                             {% endif %}
                         </div>
                         
                         <div class="mb-3">
-                            <label for="{{ form.password.id_for_label }}" class="form-label">Password</label>
-                            <input type="password" name="password" class="form-control" id="{{ form.password.id_for_label }}" required>
+                            <label for="id_password" class="form-label">Password</label>
+                            {{ form.password }}
                             {% if form.password.errors %}
                                 <div class="text-danger">{{ form.password.errors }}</div>
                             {% endif %}
